file/map/ArcGISPro/GpMessages/350367469307100
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: jueves, 25 de julio de 2024 8:11:55 a. m.</msg><msg code="539" type="100">ERROR 000539: ﻿  File "&lt;expression&gt;", line 1
    u"2589901"[-:7]
                ^
﻿SyntaxError: invalid syntax
</msg><msg code="-2147467259" type="100">Failed to execute (CalculateField).</msg><msg code="0" type="3">Failed at jueves, 25 de julio de 2024 8:11:55 a. m. (Elapsed Time: 0.37 seconds)</msg></messages>